<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pl.edu.pw.ee</groupId>
  <artifactId>Mastermind</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Mastermind</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>
    <!--keystore-data-->
    <keystore.path>keystore.jks</keystore.path>
    <keystore.alias>mastermind</keystore.alias>
    <keystore.passwd>123456</keystore.passwd>
    <!--dependency-versions-->
    <junit.version>4.13.2</junit.version>
    <lombok.version>1.18.30</lombok.version>
    <flexmark.version>0.64.8</flexmark.version>
    <flatlaf.version>3.2.5</flatlaf.version>
    <opencsv.version>5.9</opencsv.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.vladsch.flexmark</groupId>
      <artifactId>flexmark</artifactId>
      <version>${flexmark.version}</version>
    </dependency>
    <dependency>
      <groupId>com.vladsch.flexmark</groupId>
      <artifactId>flexmark-ext-tables</artifactId>
      <version>${flexmark.version}</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>${flatlaf.version}</version>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf-extras</artifactId>
      <version>${flatlaf.version}</version>
    </dependency>
    <dependency>
      <groupId>com.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>${opencsv.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <version>2.4.1</version>
        <executions>
          <execution>
            <id>l4j-gui</id>
            <phase>package</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <configuration>
              <headerType>gui</headerType>
              <outfile>target/${project.name}.exe</outfile>
              <jar>target/${project.name}-${project.version}.jar</jar>
              <errTitle>${project.name} - Error</errTitle>
              <icon>target/classes/icons/program_icon.ico</icon>
              <classPath>
                <mainClass>pl.edu.pw.ee.gui.MainFrame</mainClass>
                <addDependencies>true</addDependencies>
                <preCp>anything</preCp>
              </classPath>
              <versionInfo>
                <fileDescription>Symulator do algorytmu ewolucyjnego dla gry Mastermind</fileDescription>
                <language>POLISH</language>
              </versionInfo>
              <jre>
                <path>%JAVA_HOME%</path>
                <minVersion>18</minVersion>
              </jre>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <id>default-jar</id>
            <phase>none</phase>
          </execution>
        </executions>
        <version>3.3.0</version>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>pl.edu.pw.ee.gui.MainFrame</mainClass>
            </manifest>
          </archive>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>18</source>
          <target>18</target>
          <compilerArgs>
            <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
            <arg>--add-opens=java.base/java.time=ALL-UNNAMED</arg>
            <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>net.jsign</groupId>
        <artifactId>jsign-maven-plugin</artifactId>
        <version>5.0</version>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <file>target/${project.name}.exe</file>
              <keystore>${keystore.path}</keystore>
              <alias>${keystore.alias}</alias>
              <storepass>${keystore.passwd}</storepass>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
